opt: 修改安卓的部分代码

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "react": "16.9.0",
     "react-native": "0.61.5",
-    "react-native-xiaoe-sdk": "/Users/eli/Desktop/xiaoe/XiaoeAppSDK-ReactNative/react-native-xiaoe-sdk"
+    "react-native-xiaoe-sdk": "react-native-xiaoe-sdk"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
