--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,4 @@
 rootProject.name = 'XiaoeAppSDK-ReactNative'
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 
-include ':app', ':xeShopSDK'
+include ':app'
