--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "react": "16.9.0",
     "react-native": "0.61.5",
-    "react-native-xiaoe-app-sdk": "0.2.5"
+    "react-native-xiaoe-app-sdk": "./react-native-xiaoe-app-sdk"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
